<resources>
    <string name="app_name">Kantin Islami Digital</string>
    <string name="tab_text_1">MENU</string>
    <string name="tab_text_2">CENDIKIA</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--List Menu (xml)-->
    <string name="nama_penjual">Nama Penjual</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="rp">Rp</string>
    <string name="harga">Harga</string>
    <string name="detail">Detail</string>
    <string name="bagikan">Bagikan</string>
    <string name="beli">Beli</string>

    <!--Form Pemesanan (xml)-->
    <string name="masukkan_namamu">Masukkan namamu</string>
    <string name="pesananmu">Pesananmu</string>
    <string name="masukkan_nomer_meja">Masukkan Nomer Meja</string>
    <string name="minus">-</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="plus">+</string>
    <string name="kirim">Kirim</string>
    <string name="masukkan_jumlah_pesanan">Masukkan Jumlah Pesanan</string>
    <string name="nama">Nama</string>
    <string name="nama_penulis">nama penulis</string>
    <string name="judul">judul</string>
    <string name="ditulis_pada">Ditulis pada </string>
    <string name="tanggal"> tanggal</string>
    <string name="search_hint">Cari Sesuatu</string>
</resources>
