<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundList"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:layout_width="80px"
                android:layout_height="80px"
                android:src="@drawable/profile" />

            <TextView
                android:id="@+id/nama_penulis"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10px"
                android:gravity="center"
                android:text="@string/nama_penulis"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/backgroundList">

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:padding="60dp"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/gambar"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gambar" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundListConten"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judul"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ditulis_pada"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tanggal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>