<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormPemesanan">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/masukkan_namamu"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/name_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/nama" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/pesananmu"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/pesanan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:text="@string/pesananmu"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red"
                        android:textSize="20sp"
                        android:text=" @ Rp "/>
                    <TextView
                        android:id="@+id/harga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red"
                        android:textSize="20sp"
                        android:text="Harga"/>
                </LinearLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/masukkan_nomer_meja"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <Button
                            android:id="@+id/meja_minus"
                            android:background="@color/yellow"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:text="@string/minus"
                            android:textSize="30sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/no_meja"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_1"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            android:textSize="45sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <Button
                            android:id="@+id/meja_plus"
                            android:background="@color/yellow"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:textSize="30sp"
                            android:text="@string/plus" />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/masukkan_jumlah_pesanan"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <Button
                            android:id="@+id/decrement"
                            android:background="@color/yellow"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:text="@string/minus"
                            android:textSize="30sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/quantity_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_1"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            android:textSize="45sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <Button
                            android:id="@+id/increment"
                            android:background="@color/yellow"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:textSize="30sp"
                            android:text="@string/plus" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:onClick="submitOrder"
                android:background="@color/yellow"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/kirim"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>