<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundList"
    tools:context=".Detail.DetailCendikia">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorAccent">
                <LinearLayout
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="80px"
                        android:layout_height="80px"
                        android:src="@drawable/profile"/>
                    <TextView
                        android:id="@+id/nama_penulis"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10px"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/nama_penulis"/>
                </LinearLayout>
                <RelativeLayout
                    android:background="@color/backgroundList"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">
                    <ProgressBar
                        android:id="@+id/progress"
                        android:padding="60dp"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:visibility="visible" />
                    <ImageView
                        android:id="@+id/gambar"
                        android:scaleType="fitXY"
                        android:layout_width="match_parent"
                        android:layout_height="200dp" />
                    <TextView
                        android:id="@+id/id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/gambar"/>
                </RelativeLayout>
                <LinearLayout
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/backgroundListConten">
                    <TextView
                        android:id="@+id/judul"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/judul" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/ditulis_pada"/>
                        <TextView
                            android:id="@+id/tanggal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/tanggal"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <WebView
                        android:layout_margin="10dp"
                        android:id="@+id/textual"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>